fixed a bug blocking the Minion-drop functionality due to css z-index

--- a/webroot/css/fancy.css
+++ b/webroot/css/fancy.css
@@ -34,6 +34,7 @@ body {
 	border-bottom: 1px solid rgba(223,223,223,1);
 	border-left: 1px solid rgba(223,223,223,1);
 	border-radius: 5px;
+	z-index: 1;
 }
 .menu-language-widget {
 	display: inline-block;
@@ -1109,7 +1110,6 @@ div.user-groups-selection {
 }
 .page-events {
 	display: inline-block;
-	z-index: -1;
 	white-space: nowrap;
 	position: absolute;
 	bottom: 0px;
